Cherry-pick 256464@main (b9ff9a4dad90). https://bugs.webkit.org/show_bug.cgi?id=247499

Fix flaky test crash in indexeddb/crash-on-getdatabases.html
    https://bugs.webkit.org/show_bug.cgi?id=247499
    rdar://101970988

    Reviewed by Sihui Liu.

    We are sending invalid IDBResourceIdentifiers with
    AbortOpenAndUpgradeNeeded IPC messages to the indexeddb server.

    * Source/WebCore/Modules/indexeddb/IDBOpenDBRequest.cpp:
    (WebCore::IDBOpenDBRequest::requestCompleted):
    * Source/WebCore/Modules/indexeddb/client/IDBConnectionProxy.cpp:
    (WebCore::IDBClient::IDBConnectionProxy::abortOpenAndUpgradeNeeded):
    * Source/WebCore/Modules/indexeddb/client/IDBConnectionProxy.h:
    * Source/WebCore/Modules/indexeddb/client/IDBConnectionToServer.cpp:
    (WebCore::IDBClient::IDBConnectionToServer::abortOpenAndUpgradeNeeded):
    * Source/WebCore/Modules/indexeddb/client/IDBConnectionToServer.h:
    * Source/WebCore/Modules/indexeddb/client/IDBConnectionToServerDelegate.h:
    * Source/WebCore/Modules/indexeddb/server/IDBServer.cpp:
    (WebCore::IDBServer::IDBServer::abortOpenAndUpgradeNeeded):
    * Source/WebCore/Modules/indexeddb/server/IDBServer.h:
    * Source/WebCore/loader/EmptyClients.cpp:
    * Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
    (WebKit::NetworkStorageManager::abortOpenAndUpgradeNeeded):
    * Source/WebKit/NetworkProcess/storage/NetworkStorageManager.h:
    * Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in:
    * Source/WebKit/WebProcess/Databases/IndexedDB/WebIDBConnectionToServer.cpp:
    (WebKit::WebIDBConnectionToServer::abortOpenAndUpgradeNeeded):
    * Source/WebKit/WebProcess/Databases/IndexedDB/WebIDBConnectionToServer.h:
    * Source/WebKitLegacy/Storage/InProcessIDBServer.cpp:
    (InProcessIDBServer::abortOpenAndUpgradeNeeded):
    * Source/WebKitLegacy/Storage/InProcessIDBServer.h:
    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/mac-wk2/TestExpectations:

    Canonical link: https://commits.webkit.org/256464@main